--- a/css/styles.scss
+++ b/css/styles.scss
@@ -572,7 +572,7 @@ h5 {
   &::before {
     position: absolute;
     content: "";
-    background: url(/img/7760234.jpg);
+    background: url(https://sphaerista.github.io/landing_one/img/7760234.jpg);
     opacity: 0.6;
     top: 0;
     right: 0;
