--- a/css/styles.css
+++ b/css/styles.css
@@ -989,7 +989,7 @@ h5 {
 }
 .section-get-started::before {
   position: absolute;
-  background: url(/img/lovepik-interior-of-hassanal-borgia-mosque-picture_501238531.jpg) no-repeat 50% 50%;
+  background: url(https://sphaerista.github.io/landing_one/img/lovepik-interior-of-hassanal-borgia-mosque-picture_501238531.jpg) no-repeat 50% 50%;
   background-size: cover;
   content: "";
   top: 0;
