--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1141,7 +1141,7 @@ h5 {
 
   &::before {
     position: absolute;
-    background: url(/img/lovepik-interior-of-hassanal-borgia-mosque-picture_501238531.jpg)
+    background: url(https://sphaerista.github.io/landing_one/img/lovepik-interior-of-hassanal-borgia-mosque-picture_501238531.jpg)
       no-repeat 50% 50%;
     background-size: cover;
     content: "";
